# project-jarvis-ai

./: .gitattributes  .gitignore  Jarvis one.md  Jarvis two.md  README.md  index.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  setup.bat  vite.config.js
.aiems-test/: chatgpt-write-test.txt
.github/workflows/: ci.yml  release.yml
aiems/History/: HST-0001_ESR-0001_CHAT_HISTORY.md  HST-0002_ESR-0002_CHAT_HISTORY.md  HST-0003_ESR-0003_CHAT_HISTORY.md  HST-0004_ESR-0004_CHAT_HISTORY.md  HST-0005_ESR-0005_CHAT_HISTORY.md  HST-0006_ESR-0006_CHAT_HISTORY.md  HST-0007_ESR-0007_CHAT_HISTORY.md  HST-0008_ESR-0008_CHAT_HISTORY.md  HST-0009_ESR-0009_CHAT_HISTORY.md  HST-0010_ESR-0010_CHAT_HISTORY.md  HST-0011_ESR-0011_CHAT_HISTORY.md  HST-0012_ESR-0012_CHAT_HISTORY.md  HST-0013_ESR-0013_CHAT_HISTORY.md  HST-0015_CLAUDE_CHAT_SUMMARY.md  HST-0015_GPT_CHAT_SUMMARY.md  HST-0016_CLAUDE_CHAT_SUMMARY.md  HST-0016_GPT_CHAT_SUMMARY.md  HST-0016a_GPT_CHAT_SUMMARY.md  HST-0017_CLAUDE_CHAT_SUMMARY.md  HST-0017a_GPT_CHAT_SUMMARY.md  HST-0018_GPT_CHAT_SUMMARY.md  HST-0020_CLAUDE_CHAT_SUMMARY.md  HST-0020_GPT_CHAT_SUMMARY.md  HST-0023_CLAUDE_CHAT_SUMMARY.md  HST-0023_GPT_CHAT_SUMMARY.md
aiems/adr/: ADR-0018_SENTINEL_AI_EXECUTION_SECURITY_PLATFORM.md
aiems/architecture/: CURRENT_ARCHITECTURE.md
aiems/engineering-sessions/: ESR-0014_ENGINEERING_SESSION_CLOSURE.md
aiems/evaluations/: PEM-001_AI_PROVIDER_EVALUATION_MATRIX.md
aiems/guides/: GDE-0001_PROJECT_KNOWLEDGE_MAP.md
aiems/models/: AAM-0001_GUARDIAN_IDENTITY_AND_COGNITIVE_ARCHITECTURE.md  GAM-0001_GUARDIAN_AUTHORITY_AND_BOUNDARY_MODEL.md  MDS-0001_MEMORY_AND_DATA_STORAGE_ARCHITECTURE.md  MOD-0001_PLATFORM_ARCHITECTURE_MODEL.md  SAM-0001_SENTINEL_TRUST_ARCHITECTURE.md  UAM-0001_GUARDIAN_EXPERIENCE_ARCHITECTURE_V1.md
aiems/standards/: STD-0001_CONTROLLED_ARTEFACT_STANDARD.md  STD-0002_ENGINEERING_DOCUMENTATION_STANDARD.md  STD-0003_SOFTWARE_PYTHON_ENGINEERING_STANDARD.md  STD-0004_VALIDATION_QUALITY_ASSURANCE_STANDARD.md
aiems/templates/: TPL-0001_ENGINEERING_EXECUTION_PACKAGE_TEMPLATE.md
jarvis/: __init__.py  __main__.py  app.py
jarvis/config/: __init__.py  (+1 more)
research/: EE-0001_INDEPENDENT_AI_PEER_REVIEW_TRIAL.md
scripts/: PREREQUISITES.md  README.md  aiems_bridge.py  build_backend_sidecar.py  bump_version.py  check-prerequisites.ps1  gemini_provider_smoke_test.py  jarvis_backend_entry.py  session_launcher.py  setup-dev-environment.ps1  sponsor_approval_service.py  sponsor_client.py  start-jarvis.bat  sync_product_version.py  validate_repository.py  wp5_first_conversation_demo.py
sentinel/: __init__.py  audit.py  core.py  gemini_provider.py  local_provider.py  ollama_provider.py  openai_provider.py  orchestrator.py  policy.py  provider_config.py  providers.py
src/: App.jsx  GuardianOrbGraph.jsx  KnowledgeGraph.jsx  KnowledgeGraphPanels.jsx  main.jsx  platformStatus.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+254 files in other folders)
