[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS AI Platform"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["jarvis/tests"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
jarvis = "jarvis.app:main"

[tool.setuptools.packages.find]
include = ["jarvis", "jarvis.*"]
