[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS AI Platform"
requires-python = ">=3.12"
dependencies = [
    "psutil>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["jarvis/tests", "scripts/tests"]
pythonpath = ["."]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pip-audit",
]

[project.scripts]
jarvis = "jarvis.app:main"

[tool.setuptools.packages.find]
include = ["jarvis", "jarvis.*", "sentinel", "sentinel.*"]