[package]
name = "jarvis-guardian-shell"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[lib]
name = "jarvis_guardian_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "jarvis-guardian-shell"
path = "src/main.rs"